tests/knowledge/testing-accounts-data/account-data-us-east-1-has-no-default-vpc/test/sa-east-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "sa-east-1b",
            "AvailabilityZoneId": "sae1-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:sa-east-1:111111111111:subnet/subnet-9268fedb",
            "SubnetId": "subnet-9268fedb",
            "VpcId": "vpc-7c9d7b1a"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "sa-east-1c",
            "AvailabilityZoneId": "sae1-az3",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:sa-east-1:111111111111:subnet/subnet-1f990744",
            "SubnetId": "subnet-1f990744",
            "VpcId": "vpc-7c9d7b1a"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "sa-east-1a",
            "AvailabilityZoneId": "sae1-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:sa-east-1:111111111111:subnet/subnet-13019175",
            "SubnetId": "subnet-13019175",
            "VpcId": "vpc-7c9d7b1a"
        }
    ]
}
